--- a/src/app/features/login/login.component.scss
+++ b/src/app/features/login/login.component.scss
@@ -1,5 +1,5 @@
-@import '../../styles/variables.scss';
-@import '../../styles/mixin.scss';
+@use '../../styles/variables.scss' as *;
+@use '../../styles/mixin.scss' as *;
 
 .login-form {
   @include flex-column;
