--- a/src/app/features/users/users.component.html
+++ b/src/app/features/users/users.component.html
@@ -115,7 +115,7 @@
               <td mat-cell *matCellDef="let user" class="data-cell email-cell">
                 {{ user.email }}
               </td>
-              
+              </ng-container>
 
             <!-- Role -->
             <ng-container matColumnDef="role">
